introduced timeline activity and view

--- a/DoDHackathon2013/AndroidManifest.xml
+++ b/DoDHackathon2013/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:label="Select Food"
             android:theme="@style/DialogTheme">
         </activity>
+        <activity
+            android:name="dod.hackathon.combatfeeding.TimelineActivity"
+            android:label="Timeline"
+            android:theme="@style/AppTheme" >
+        </activity>
         
     </application>
 
