--- a/DoDHackathon2013/AndroidManifest.xml
+++ b/DoDHackathon2013/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="dod.hackathon.combatfeeding.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="sensorPortrait" 
+            android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,6 +34,11 @@
         <activity 
             android:name="dod.hackathon.combatfeeding.FoodPicker"
             android:label="Select Food"
+            android:theme="@style/DialogTheme">
+        </activity>
+        <activity 
+            android:name="dod.hackathon.combatfeeding.ExercisePicker"
+            android:label="Select Exercises"
             android:theme="@style/DialogTheme">
         </activity>
         
