added gear picker intial version

--- a/DoDHackathon2013/AndroidManifest.xml
+++ b/DoDHackathon2013/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:theme="@style/DialogTheme" >
         </activity>
         <activity
+            android:name="dod.hackathon.combatfeeding.GearPicker"
+            android:label="Select Gear"
+            android:theme="@style/DialogTheme" >
+        </activity>
+        <activity
             android:name="dod.hackathon.combatfeeding.TimelineActivity"
             android:label="Timeline"
             android:theme="@style/AppTheme" >
